tests/ui/unit_struct.stderr
error: fixcol-derive error: Cannot derive ReadFixed for unit type
 --> tests/ui/unit_struct.rs:4:8
  |
4 | struct Thing;
  |        ^^^^^

error: fixcol-derive error: Cannot derive WriteFixed for unit structs.
 --> tests/ui/unit_struct.rs:4:8
  |
4 | struct Thing;
  |        ^^^^^
