tests/ui/unit_struct.rs
use fixed_derive::{ReadFixed, WriteFixed};

#[derive(ReadFixed, WriteFixed)]
struct Thing;

pub fn main() {}
